<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bamster</string>
    <string name="intro_name">intro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_play_easy">Easy</string>
    <string name="btn_play_medium">Normal</string>
    <string name="btn_play_hard">Hard</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="title_activity_gameover">Game Over</string>
    <string name="userName_hint">Nickname</string>
    <string name="saveScore">Save</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="noEntries">no Entries</string>
    <string name="helpingText">Halte den Finger am Bildschirm gedrückt um eine Linie zu zeichnen. Fällt der Hamster zu Boden, zeichnest du die Linie zu steil oder berührst du zu viele Hindernisse verlierst du!</string>

</resources>
