<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:gravity="center"
android:orientation="vertical"
tools:context="wien.kollektiv.bamster.MenuActivity" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dip"
        android:paddingTop="80dip" >
        
        <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:paddingLeft="10dip"
		    android:paddingRight="10dip" >
		    <ImageButton
		        android:id="@+id/btn_play_easy"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/btn_play_easy"
		        android:onClick="startGame"
		        android:src="@drawable/play_button_01"
		        android:background="@null" />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/easy"
		        android:layout_below="@id/btn_play_easy"
		        android:layout_centerInParent="true" />
	    </RelativeLayout>
	    
        <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:paddingLeft="10dip"
		    android:paddingRight="10dip" >
		    <ImageButton
		        android:id="@+id/btn_play_medium"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/btn_play_medium"
		        android:onClick="startGame"
		        android:src="@drawable/play_button_01"
		        android:background="@null" />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/medium"
		        android:layout_below="@id/btn_play_medium"
		        android:layout_centerInParent="true" />
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:paddingLeft="10dip"
		    android:paddingRight="10dip" >"
		    <ImageButton
		        android:id="@+id/btn_play_hard"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/btn_play_hard"
		        android:onClick="startGame"
		        android:src="@drawable/play_button_01"
		        android:background="@null" />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hard"
		        android:layout_below="@id/btn_play_hard"
		        android:layout_centerInParent="true" />
	    </RelativeLayout>
	    
    </LinearLayout>
    
    <RelativeLayout
        android:orientation="horizontal"      
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="100dip" 
		android:paddingRight="100dip"
		android:layout_marginBottom="-2dip"  >
    
	    <ListView
	        android:id="@+id/highscoreTable"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAlignment="center"
			android:layout_alignParentBottom="true"
			android:background="@drawable/border_ui"
			android:padding="4dip" />
	    
	    <TextView 
	        android:id="@+id/emptyHighscoreMessage"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:text="@string/noEntries"
	        android:gravity="center"
			android:textSize="50sp"
			android:paddingBottom="50dip" />
    
    </RelativeLayout>
    
</LinearLayout>
